--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -14,6 +14,10 @@
         &.fade-in{
             background-image: linear-gradient($darkblue, transparent);
         }
+
+        &.fade-out{
+            visibility: hidden;
+        }
         
     
     }
