--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -239,6 +239,10 @@ button:hover {
   background-image: linear-gradient(#2d314d, transparent);
 }
 
+.header .overlay.fade-out {
+  visibility: hidden;
+}
+
 .header__menu {
   background: white;
   padding: 1.625rem;
@@ -677,6 +681,11 @@ button:hover {
   }
 }
 
+.footer__icons a {
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+}
+
 .footer__icons a:hover svg path {
   fill: #2bb7da;
 }
@@ -693,6 +702,11 @@ button:hover {
 
 .footer__textlink.col2 {
   margin-bottom: 1rem;
+}
+
+.footer__textlink a {
+  -webkit-transition: color 200ms ease-in-out;
+  transition: color 200ms ease-in-out;
 }
 
 .footer__textlink a:hover {
